Aligned flags and country links

--- a/travel.html
+++ b/travel.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/bootstrap.css">
   <title>My Travel Site</title>
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <h1>Welcome to my travel site</h1>
-      <p>This site is all about where I want to travel</p>
-    </div>
-    <h2>Here are some places I would like to visit</h2>
-    <ul>
-      <li>
-        <img src="assets/spain_flag.png" width="100">
-        <a href="http://www.spain.info/en_US/" target="_blank">Spain</a>
-      </li>
-      <li>
-        <img src="assets/italy_flag.png" width="100">
-        <a href="http://www.italia.it/en/home.html" target="_blank">Italy</a>
-      </li>
-      <li>
-        <img src="assets/aruba_flag.png" width="100">
-        <a href="http://www.arubatourism.com/" target="_blank">Aruba</a>
-      </li>
-      <li>
-        <img src="assets/us_flag.png" width="100">
-        <a href="https://www.travelalaska.com/" target="_blank">Alaska</a>
-      </li>
-    </ul>
 
-  <!-- Cols: Destination, Captial, Language -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <h1>Welcome to my travel site</h1>
+    </div>
+    <div class="col-md-12 text-center">
+      <p><em>This site is all about where I want to travel</em></p>
+    </div>
+  </div>
+  
+  <div class="row">  
+    <div class="col-md-6">
+      <h4>Places I'd like to visit</h4>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <p><a href="http://www.spain.info/en_US/" target="_blank">Spain</a></p>
+          <img src="assets/spain_flag.png" width="300">
+    </div> 
+    <div class="col-md-6">       
+      <p><a href="http://www.italia.it/en/home.html" target="_blank">Italy</a></p>
+      <img src="assets/italy_flag.png" width="300">
+    </div>
+  </div>
+
+  <div class="row">
+      <div class="col-md-6">
+      <p><a href="http://www.arubatourism.com/" target="_blank">Aruba</a></p>
+        <img src="assets/aruba_flag.png" width="300">
+      </div>
+      <div class="col-md-6">
+        <p><a href="https://www.travelalaska.com/" target="_blank">Alaska</a></p>
+        <img src="assets/us_flag.png" width="300" height="200">
+      </div>
+  </div>
+  
+  <div class="row">
     <table>
       <tr>
         <th>Destination</th>
@@ -54,18 +68,8 @@
         <td>English</td>
       </tr>
     </table>
-
-    <fieldset>
-      <!-- Non nested allows for text first then input -->
-      <label for="country">Enter Country:</label>
-      <input type="text" name="country" id="country">
-      <!-- Nested allows input first then text -->
-      <label for="country">
-        <input type="radio" name="country">Spain
-        <input type="radio" name="country">Cuba
-      </label>
-    </fieldset>
   </div>
+</div>
 
 
 </body>
