--- a/travel.html
+++ b/travel.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/custom.css">
   <title>My Travel Site</title>
 </head>
 <body>
@@ -46,27 +47,35 @@
   </div>
   
   <div class="row">
-    <table>
-      <tr>
-        <th>Destination</th>
-        <th>Capital</th>
-        <th>Official Language</th>
-      </tr>
-      <tr>
-        <td>Italy</td>
-        <td>Rome</td>
-        <td>Italian</td>
-      </tr>
-      <tr>
-        <td>Aruba</td>
-        <td>Oranjestad</td>
-        <td>Dutch</td>
-      </tr>
-      <tr>
-        <td>Alaska</td>
-        <td>Juneau</td>
-        <td>English</td>
-      </tr>
+    <div class="col-md-12">
+      <table class="table table-hover">
+        <caption>Country Information</caption>
+        <tr>
+          <th>Destination</th>
+          <th>Capital</th>
+          <th>Official Language</th>
+        </tr>
+        <tr>
+          <td>Spain</td>
+          <td>Madrid</td>
+          <td>Spanish</td>
+        </tr>
+        <tr>
+          <td>Italy</td>
+          <td>Rome</td>
+          <td>Italian</td>
+        </tr>
+        <tr>
+          <td>Aruba</td>
+          <td>Oranjestad</td>
+          <td>Dutch</td>
+        </tr>
+        <tr>
+          <td>Alaska</td>
+          <td>Juneau</td>
+          <td>English</td>
+        </tr>
+      </div>
     </table>
   </div>
 </div>
